<resources>
    <string name="app_name">finalActivity</string>
    <string name="title_activity_navigationdrawer">navigationdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Vel Llacuna</string>
    <string name="nav_header_subtitle">johnvelllacuna@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_firstapplication">My First Application</string>
    <string name="menu_wrapcontent">Wrap Content</string>
    <string name="menu_analogdigital">Analog and Digital</string>
    <string name="menu_ratingbar">Rating bar</string>
    <string name="menu_newactivity">Start new Activity</string>
    <string name="menu_radiobutton">Radio Button</string>
    <string name="menu_imageview">Imageview</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_logout">Log out</string>

</resources>